--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,4 @@
 
 # Project target.
 target=android-20
+android.library.reference.1=../../Study/android_demo/001/BaseAnimation1.3版本/BAnim_ListViewLibrary
