--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name="com.nr.myanimation.splashactivity.LensFocusActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.nr.myanimation.listviewactivity.GoogleCardsActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
