--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:name="com.nr.myanimation.listviewactivity.GoogleCardsActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.nr.myanimation.customactivity.OutTicketActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
