--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,14 @@
             android:name="com.nr.myanimation.customactivity.OutTicketActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.nr.myanimation.listviewactivity.AppearanceExamplesActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.nr.myanimation.listviewactivity.ExpandableListItemActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
