--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:name="com.nr.myanimation.ui.gallery.GalleryMainActivity2"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.nr.myanimation.customactivity.JellyPagerActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
