--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -78,6 +78,11 @@
             android:name="com.nr.myanimation.ui.custom.circlemenu.CircleMenuMainActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.nr.myanimation.swipebackactivity.SwipeBackActivityTest1"
+            android:label="@string/app_name"
+            android:theme="@style/WindowIsTranslucentTheme" >
+        </activity>
     </application>
 
 </manifest>
